Fixed: Ticket Menu Module is overlapping (bug#12990).

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Header.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Header.css
@@ -155,6 +155,10 @@
     overflow: hidden;
 }
 
+.NavContainerZIndex{
+    z-index: 5500 !important;
+}
+
 #NavigationContainer #Navigation {
     left: 0px;
     position: absolute;
